# Instagram---Django-project

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
Instagram/: asgi.py  settings.py  urls.py  wsgi.py
Instagram/Instagram/: settings.py
Instagram/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
core/: settings.py  urls.py
core/tests/: test_forms.py  test_urls.py
main/: admin.py  context_managers.py  decorators.py  forms.py  models.py  settings.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_userprofile_delete_user.py  0003_alter_userprofile_user.py  0004_userprofile_gender.py  0005_alter_userprofile_gender.py  0006_alter_userprofile_gender.py  0007_alter_userprofile_profile_img.py  0008_alter_userprofile_description_and_more.py  0009_alter_comment_post_alter_comment_user_and_more.py  0010_alter_comment_post_alter_comment_user_and_more.py  0011_userprofile_posts_amount.py  0012_userprofile_followers_amount_and_more.py  0013_comment_likes_post_likes.py  0014_like.py  0015_follow.py  0016_follow_user_followed_alter_follow_user.py  0017_alter_follow_followd_user_id.py  0018_alter_post_date.py  0019_remove_like_comment.py
main/templates/: account_settings.html  add_post.html  base.html  followers.html  following.html  home.html  likes_list.html  menu.html  post.html  profile_settings.html  user_profile.html
main/tests/: test_models.py  test_views.py
src/: mixins.py
src/comment/: apps.py  forms.py  models.py  (+2 more)
static_dir/: base.css  like_hover.js  modal.css  modal.js  post.css
(+44 files in other folders)
