[tool.poetry]
name = "instagram-demo"
version = "0.1.0"
description = ""
authors = ["Krzysztof Grabczyński <grabczynski.krzysztof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-bootstrap-form = "^3.4"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
redgreenunittest = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
